minor changes and new coffee

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coffee-script": "^1.8.0",
     "lodash": "^2.4.1",
     "mocha": "^2.0.1",
+    "moment": "^2.8.4",
     "numeral": "^1.5.3",
     "string": "^3.0.0"
   }
